<resources>
    <string name="app_name">Password Generator</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="new_pass">Generate Pass</string>
    <string name="cap_button">Capital Letters</string>
    <string name="low_button">Lowercase Letters</string>
    <string name="num_button">Numbers</string>
    <string name="spec_button">Symbols</string>
    <string name="pass_length">0</string>
    <string name="channel_name">PasswordGenerator</string>
    <string name="channel_description">Generates Password</string>
    <string name="gen_pass">New Pass</string>
</resources>