<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refresh"
            android:layout_width="10dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_popup_sync"
            android:onClick="generatePass" />

        <TextView
            android:id="@+id/passfield"
            android:layout_width="208dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/new_pass"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Copy"
            android:layout_width="10dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="?attr/actionModeCopyDrawable"
            android:onClick="copyPass" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/capCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif"
                android:onClick="clickCheckBox"
                android:text="@string/cap_button" />

            <CheckBox
                android:id="@+id/lowCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif"
                android:onClick="clickCheckBox"
                android:text="@string/low_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/numCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif"
                android:onClick="clickCheckBox"
                android:text="@string/num_button" />

            <CheckBox
                android:id="@+id/specCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="sans-serif"
                android:onClick="clickCheckBox"
                android:text="@string/spec_button" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/pass_length"
        android:textSize="24sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar3"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:max="12"
        android:progress="4" />

</LinearLayout>